# gitlab-ci-ls

./: .gitignore  .releaserc.json  .releaserc.yaml  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: artifacts.yaml  ci.yaml  homebrew-sync.yaml  homebrewsync.yaml  release.yaml
conductor/tracks/auto-indexing_20251228/: plan.md
gitlab-ci-ls-parser/: Cargo.toml
gitlab-ci-ls-parser/src/: git.rs  handlers.rs  lib.rs  parser.rs  treesitter.rs
gitlab-parser/: Cargo.toml
gitlab-parser/src/: events.rs  handlers.rs  lib.rs  parser.rs  parser_utils.rs  treesitter.rs  utils.rs
src/: main.rs
src/gitlab_ci_ls_parser/: fingerprint.rs  fs_utils.rs  git.rs  graph.rs  handlers.rs  messages.rs  mod.rs  parser.rs  parser_utils.rs  treesitter.rs  treesitter_queries.rs  workspace.rs
src/resources/: gitlab_predefined_vars.yaml
vscode-extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/client/: package-lock.json  package.json
vscode-extension/client/src/: extension.ts
