[package]
name = "gitlab-ci-ls"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/alesbrelih/gitlab-ci-ls"
description = "Language server for Gitlab CI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
streaming-iterator = "0.1.9"
lsp-server = "0.7.9"
lsp-types = "0.95.1"
serde_json = "1.0.142"
simple-logging = "2.0.2"
simple_logger = "5.0.0"
tokio = "1.47.1"
anyhow = "1.0.99"
serde = "1.0.219"
tree-sitter = "0.25.8"
tree-sitter-yaml = "0.7.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
regex = "1.11.2"
serde_yaml = "0.9.34"
crc64 = "2.0.0"
clap = { version = "4.5.45", features = ["derive"] }
mockall = "0.13.1"
glob = "0.3.3"
temp-env = "0.3.6"

[lints.clippy]
all = "deny"
pedantic = "deny"
