[package]
name = "gitlab-ci-ls-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the Gitlab CI language server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
reqwest = { version = "0.12.2", features = ["blocking"] }
git2.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
simple-logging.workspace = true
simple_logger.workspace = true
tokio.workspace = true
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-yaml.workspace = true
